cmake_minimum_required(VERSION 3.0)
project(data_frame_prototype CXX)
set(CMAKE_CXX_FLAGS "-std=c++17 ${CMAKE_CXX_FLAGS}")
find_package(Boost REQUIRED)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
endif()
include_directories("${PROJECT_SOURCE_DIR}/include/boost/numeric/ublas")
add_subdirectory("${PROJECT_SOURCE_DIR}/test")
add_subdirectory("${PROJECT_SOURCE_DIR}/example")
add_subdirectory("${PROJECT_SOURCE_DIR}/googletest")
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
